werc-host-werc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: werc-deployment
  namespace: werc-host

spec:
  replicas: 15
  selector:
    matchLabels:
      app: werc
  template:
    metadata:
      labels:
        app: werc
    spec:
      # init container is required as the data might not be preinstalled on the nfs volume
      containers:
      - name: werc-container
        image: hngt/werc:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: werc-sites
          mountPath: /var/www/werc
        - name: lighttpd-config
          mountPath: /etc/lighttpd
        tty: true
      volumes:
      - name: werc-sites
        nfs:
           server: 10.128.69.1
           path: /exports
      - name: lighttpd-config
        configMap: 
          name: lighttpd-config
