nfs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-server
  namespace: werc-host
spec:
  replicas: 1
  selector:
    matchLabels:
      role: nfs-server
  template:
    metadata:
      labels:
        role: nfs-server
    spec:
      containers:
        - name: nfs-server
          image: k8s.gcr.io/volume-nfs:0.8
          ports:
            - name: nfs
              containerPort: 2049
            - name: mountd
              containerPort: 20048
            - name: rpcbind
              containerPort: 111
          securityContext:
            privileged: true
          volumeMounts:
            - name: werc-sites-pvc
              mountPath: /exports
      volumes:
        - name: werc-sites-pvc
          persistentVolumeClaim:
            claimName: werc-sites-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nfs-server
  namespace: werc-host
spec:
  ports:
    - name: nfs
      port: 2049
    - name: mountd
      port: 20048
    - name: rpcbind
      port: 111
  clusterIP: 10.128.69.1
  selector:
    role: nfs-server
